--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <div class="row">
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
-                        <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
+                        <img class="img-fluid mb-4" src="img/event-1.jpg" alt="" style="width:400px;height: 300px;">
                         <h4 class="mb-3">Misa</h4>
                         <p class="mb-2">Parroquia de San Luis Obispo de Tolosa <br/> Pl. Juárez, 56700, Tlalmanalco de Velázquez, Méx.</p>
                         <p class="mb-0">16:00 hrs.</p>
@@ -429,7 +429,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-center text-md-left ml-md-3">
-                        <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
+                        <img class="img-fluid mb-4" src="img/event-2.jpg" alt="" style="width:400px;height: 300px;">
                         <h4 class="mb-3">Boda</h4>
                         <p class="mb-2">Carr Federal México-Cuautla Km. 48.5 <br/> Fracc. Campestre, 56715 Santa María, Méx.</p>
                         <p class="mb-0">18:00 hrs. - 01:00 hrs.</p>
