--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container-fluid p-0 mb-5 pb-5" id="home">
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
+                <div class="carousel-item position-relative active" style="height: 80vh; min-height: 400px;">
                     <img class="position-absolute w-100 h-100" src="img/carousel-1.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
@@ -124,7 +124,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>        
                     <!-- 16:9 aspect ratio -->
-                    <div class="embed-responsive embed-responsive-16by9">
+                    <div class="embed-responsive embed-responsive-16by9" style="height: 900px;">
                         <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always" allow="autoplay"></iframe>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
-                            <h4 class="mb-2">"Realmente no necesitas de alguien para que te complete, solo necesitas de alguien que te acepte completamente."</h4>
+                            <h4 class="mb-2">"Ella aquí luce como estrella; ella aquí: todo es claridad; si aquí está es fácil ver que aquí hoy quiero estar."</h4>
                             <p class="text-uppercase mb-2"></p>
                             <p class="m-0"></p>
                         </div>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
-                            <h4 class="mb-2">"Ella aquí luce como estrella; ella aquí: todo es claridad; si aquí está es fácil ver que aquí hoy quiero estar."</h4>
+                            <h4 class="mb-2">"Pero esa luz dentro de ti ha hecho que me sienta lleno de vida. Todo lo que quiero ahora es estar cerca de ti."</h4>
                             <p class="text-uppercase mb-2"></p>
                             <p class="m-0"></p>
                         </div>
@@ -245,17 +245,12 @@
     <!-- Gallery Start -->
     <div class="container-fluid bg-gallery" id="gallery" style="padding: 120px 0; margin: 90px 0;">
         <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
-            <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Gallery</h6>
+            <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Galería</h6>
             <h1 class="font-secondary display-4 text-white">Nuestra Galería de Fotos</h1>
             <i class="far fa-heart text-white"></i>
         </div>
         <div class="owl-carousel gallery-carousel">
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-20.jpg" alt="">
-                <a href="img/gallery-20.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
+            
             <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-19.jpg" alt="">
                 <a href="img/gallery-19.jpg" data-lightbox="gallery">
@@ -265,12 +260,6 @@
             <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-18.jpg" alt="">
                 <a href="img/gallery-18.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-17.jpg" alt="">
-                <a href="img/gallery-17.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
@@ -287,13 +276,7 @@
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-14.jpg" alt="">
-                <a href="img/gallery-14.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-13.jpg" alt="">
+                <img class="img-fluid w-100" src="img/gallery-13.jpg" alt="" style="height: 384px;">
                 <a href="img/gallery-13.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
@@ -304,15 +287,10 @@
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
+            
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-11.jpg" alt="">
-                <a href="img/gallery-11.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-10.jpg" alt="">
-                <a href="img/gallery-10.jpg" data-lightbox="gallery">
+                <img class="img-fluid w-100" src="img/gallery-17.jpg" alt="">
+                <a href="img/gallery-17.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
@@ -329,37 +307,13 @@
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-7.jpg" alt="">
-                <a href="img/gallery-7.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
-                <a href="img/gallery-6.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
                 <a href="img/gallery-5.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
             <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
-                <a href="img/gallery-4.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
-                <a href="img/gallery-3.jpg" data-lightbox="gallery">
-                    <i class="fa fa-2x fa-plus text-white"></i>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
+                <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="" style="height: 384px;">
                 <a href="img/gallery-2.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
@@ -532,7 +486,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <h5 class="font-weight-normal text-muted mb-3 pb-3">
-                        Les ofrecemos la opción de hospedarse en el Club Santa María, donde celebraremos nuestra fiesta. Al hacerlo, disfrutarán de acceso completo a instalaciones como canchas de tenis, basquetbol, futbol, alberca, gimnasio, entre otras amenidades. Para más detalles y reservas, por favor, contáctennos. ¡Esperamos compartir este día especial con ustedes!
+                        Les ofrecemos la opción de hospedarse en el Club Santa María, donde celebraremos nuestra fiesta. Al hacerlo, disfrutarán de acceso completo a instalaciones como canchas de tenis, basquetbol, futbol, alberca, gimnasio, entre otras amenidades. Adicionalmente, el club cuenta con restaurante. Para más detalles y reservas (cupo limitado), por favor, contáctennos. ¡Esperamos compartir este día especial con ustedes!
                     </h5>
                 </div>
             </div>
