--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <h5 class="font-weight-normal text-muted mb-3 pb-3">
-                        Les ofrecemos la opción de hospedarse en el Club Santa María, donde celebraremos nuestra fiesta. Al hacerlo, disfrutarán de acceso completo a instalaciones como canchas de tenis, basquetbol, futbol, alberca, gimnasio, entre otras amenidades. Adicionalmente, el club cuenta con restaurante. Para más detalles y reservas (cupo limitado), por favor, contáctennos. ¡Esperamos compartir este día especial con ustedes!
+                        Les ofrecemos la opción de hospedarse en el Club Santa María, donde celebraremos nuestra fiesta. Al hacerlo, disfrutarán de acceso completo a instalaciones como canchas de tenis, basquetbol, futbol, alberca, gimnasio, restaurante, entre otras amenidades. Para más detalles y reservas (cupo limitado), por favor, contáctennos. ¡Esperamos compartir este día especial con ustedes!
                     </h5>
                 </div>
             </div>
@@ -489,6 +489,7 @@
         <div class="container text-center py-5">
             <div class="section-title position-relative text-center">
                 <h1 class="font-secondary display-3 text-white">Gracias</h1>
+                <h3 class="font-secondary" style="color: tomato;">Te invitamos a confirmar tu asistencia lo antes posible</h3>
                 <i class="far fa-heart text-white"></i>
             </div>
             <div class="d-flex justify-content-center py-2">
