--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">Nos casamos</h3>
                             </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
+                            <!--<button type="button" class="btn-play mx-auto" data-toggle="modal"
                                 data-src="img/pedida.mp4" data-target="#videoModal">
                                 <span></span>
-                            </button>
+                            </button>-->
                         </div>
                     </div>
                 </div>
@@ -92,10 +92,10 @@
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">Nos casamos</h3>
                             </div>
-                            <button type="button" class="btn-play mx-auto" data-toggle="modal"
+                            <!--<button type="button" class="btn-play mx-auto" data-toggle="modal"
                                 data-src="img/pedida.mp4" data-target="#videoModal">
                                 <span></span>
-                            </button>
+                            </button>-->
                         </div>
                     </div>
                 </div>
@@ -508,7 +508,7 @@
 
 
     <!-- Scroll to Bottom -->
-    <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
+    <i class="fa fa-2x fa-angle-down scroll-to-bottom" style="font-size: 60px;color:#E47A2E"></i>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-outline-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
