--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
 
     <!-- RSVP Start -->
-    <div class="container-fluid py-5" id="rsvp">
+    <div class="container-fluid" id="rsvp" style="padding-top: 6rem !important;">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Hospedaje</h6>
