--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('liverpool')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('mercado libre')">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/mercadoLibre.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
                         <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
@@ -421,7 +421,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('palacio de hierro')">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/palacioDeHierro.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
                         <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
@@ -431,7 +431,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('liverpool')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('amazon')">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/amazon.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
                         <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
@@ -440,7 +440,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('sears')">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/sears.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
                         <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
@@ -449,7 +449,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('liverpool')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('transferencia')">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/transferencia.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
                         <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
@@ -465,7 +465,7 @@
 
 
     <!-- RSVP Start -->
-    <div class="container-fluid" id="rsvp" style="padding-top: 6rem !important;">
+    <div class="container-fluid" id="rsvp" style="padding-top: 5rem !important;">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Hospedaje</h6>
