--- a/index.html
+++ b/index.html
@@ -405,57 +405,32 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')">
                     <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/liverpool.jpg" style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
-                        <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
-                            <h4 class="mb-3">Liverpool</h4>
-                            <p class="text-uppercase">Da clic</p>
-                        </div>
+                        <img class="img-fluid w-100" src="img/liverpool.jpg" style="border:2px solid #DDD; border-radius: 15px" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('mercado libre')">
                     <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/mercadoLibre.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
-                        <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
-                            <h4 class="mb-3">Mercado Libre</h4>
-                            <p class="text-uppercase">Da clic</p>
-                        </div>
+                        <img class="img-fluid w-100" src="img/mercadoLibre.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('palacio de hierro')">
                     <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/palacioDeHierro.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
-                        <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
-                            <h4 class="mb-3">Palacio de Hierro
-                            </h4>
-                            <p class="text-uppercase">Da clic</p>
-                        </div>
+                        <img class="img-fluid w-100" src="img/palacioDeHierro.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('amazon')">
                     <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/amazon.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
-                        <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
-                            <h4 class="mb-3">Amazon</h4>
-                            <p class="text-uppercase">Da clic</p>
-                        </div>
+                        <img class="img-fluid w-100" src="img/amazon.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('sears')">
                     <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/sears.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
-                        <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
-                            <h4 class="mb-3">Sears</h4>
-                            <p class="text-uppercase">Da clic</p>
-                        </div>
+                        <img class="img-fluid w-100" src="img/sears.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('transferencia')">
                     <div class="position-relative mb-2">
-                        <img class="img-fluid w-100" src="img/transferencia.jpg"  style="border:2px solid #DDD; border-radius: 15px 15px 0px 0px;" alt="">
-                        <div class="bg-secondary text-center p-4" style="border-radius: 0px 0px 15px 15px;">
-                            <h4 class="mb-3">Transferencia</h4>
-                            <p class="text-uppercase">Da clic</p>
-                        </div>
+                        <img class="img-fluid w-100" src="img/transferencia.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
             </div>
