--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row portfolio-container">
+            <div id="container-mesa" class="row portfolio-container" hidden="true">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/liverpool.jpg" style="border:2px solid #DDD; border-radius: 15px" alt="">
@@ -440,7 +440,7 @@
 
 
     <!-- RSVP Start -->
-    <div class="container-fluid" id="rsvp" style="padding-top: 5rem !important;">
+    <div class="container-fluid" id="rsvp" style="padding-top: 3rem !important;">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Hospedaje</h6>
