--- a/index.html
+++ b/index.html
@@ -396,9 +396,10 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center mb-2">
+                    <h2 style="margin-bottom: 35px;">Da clic a un botón</h2>
                     <ul class="list-inline mb-4" id="portfolio-flters">
-                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".first">Tiendas departamentales</li>
-                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".second">Algo más...</li>
+                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".first" style="border-radius: 15px;">Tiendas departamentales</li>
+                        <li class="btn btn-outline-primary font-weight-bold m-1 py-2 px-4" data-filter=".second" style="border-radius: 15px;">Algo más...</li>
                     </ul>
                 </div>
             </div>
