--- a/index.html
+++ b/index.html
@@ -403,33 +403,33 @@
                     </ul>
                 </div>
             </div>
-            <div id="container-mesa" class="row portfolio-container" hidden="true">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')">
+            <div id="container-mesa" class="row portfolio-container">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')" id="mesa1" hidden="true">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/liverpool.jpg" style="border:2px solid #DDD; border-radius: 15px" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('mercado libre')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('mercado libre')" id="mesa2"  hidden="true">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/mercadoLibre.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('palacio de hierro')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('palacio de hierro')" id="mesa3"  hidden="true">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/palacioDeHierro.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('amazon')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('amazon')" id="mesa4"  hidden="true">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/amazon.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('sears')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('sears')" id="mesa5"  hidden="true">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/sears.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('transferencia')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('transferencia')" id="mesa6"  hidden="true">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/transferencia.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
