--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                         <p>La protagonista de esta hermosa historia, llega para cubrir el día con la magia de sus risas y la dulzura de su corazón. Su presencia siempre crea momentos encantadores e inolvidables, siendo la inspiración que da vida a esta historia mágica, donde cada instante se convierte en un capítulo lleno de amor y alegría.</p>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-female text-primary pr-3"></i>Jani</h3>
                         <div class="position-relative">
-                            <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-1" href="https://m.facebook.com/profile.php/?id=100001550040820&name=xhp_nt__fb__action__open_user&locale=es_LA"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/janeli_laso/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -168,8 +168,8 @@
                         <p>El protagonista de este cuento de amor llega para iluminar nuestro día con la calidez de su espíritu y la bondad que emana de su corazón. Su sonrisa permanente crea momentos tan mágicos como significativos. Su presencia teje instantes llenos de complicidad y amor, creando historias únicas y llenas de alegría.</p>
                         <h3 class="font-secondary font-weight-normal text-muted mb-3"><i class="fa fa-male text-primary pr-3"></i>Sam</h3>
                         <div class="position-relative">
-                            <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/samyarteagalara/"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-1" href="https://m.facebook.com/profile.php/?id=100001832431290&name=STSDirectNavUserDecorator&locale=es_LA"><i class="fab fa-facebook-f"></i></a>
                         </div>
                     </div>
                 </div>
@@ -404,32 +404,32 @@
                 </div>
             </div>
             <div id="container-mesa" class="row portfolio-container" hidden="true">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('liverpool')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="window.location.href = 'https://mesaderegalos.liverpool.com.mx/milistaderegalos/51327903'">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/liverpool.jpg" style="border:2px solid #DDD; border-radius: 15px" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('mercado libre')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="window.location.href = 'https://meli.uniko.co/E2253/boda/janiysam'">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/mercadoLibre.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('palacio de hierro')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="window.location.href = 'https://www.elpalaciodehierro.com/buscar?eventId=383878'">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/palacioDeHierro.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('amazon')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="window.location.href = 'https://www.amazon.com.mx/wedding/registry/3J92ATVNNWPEF'">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/amazon.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="alert('sears')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first" onclick="window.location.href = 'https://www.google.com'">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/sears.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="alert('transferencia')">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second" onclick="window.location.href = 'https://www.google.com'">
                     <div class="position-relative mb-2">
                         <img class="img-fluid w-100" src="img/transferencia.jpg"  style="border:2px solid #DDD; border-radius: 15px;" alt="">
                     </div>
