--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jani & Sam - Free Wedding Website Template</title>
+    <title>Boda - Jani & Sam</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -516,12 +514,12 @@
             <div class="d-flex justify-content-center py-2">
                 <p class="text-white" href="#">Cel. Jani</p>
                 <span class="px-3">|</span>
-                <p class="text-white" href="#">5587807191</p>
+                <p class="text-white" href="tel:+525587807191">5587807191</p>
             </div>
             <div class="d-flex justify-content-center py-2">
                 <p class="text-white" href="#">Cel. Sam</p>
                 <span class="px-3">|</span>
-                <p class="text-white" href="#">5566790456</p>
+                <p class="text-white" href="tel:+525566790456">5566790456</p>
             </div>
         </div>
     </div>
