--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <div class="container-fluid py-5" id="story">
         <div class="container pt-5 pb-3">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6>
+                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Historia</h6>
                 <h1 class="font-secondary display-4">Nuestra historia de amor</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -390,8 +390,8 @@
     <div class="container-fluid py-5" id="event">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6>
-                <h1 class="font-secondary display-4">El evento de nuestra boda</h1>
+                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Boda</h6>
+                <h1 class="font-secondary display-4">El evento de nuestra vida</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             
@@ -416,7 +416,7 @@
                 <div class="col-md-6">
                     <div class="text-center text-md-left ml-md-3">
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="" style="width:400px;height: 300px;">
-                        <h4 class="mb-3">Boda</h4>
+                        <h4 class="mb-3">Recepción</h4>
                         <p class="mb-2">Carr Federal México-Cuautla Km. 48.5 <br/> Fracc. Campestre, 56715 Santa María, Méx.</p>
                         <p class="mb-0">18:00 hrs. - 01:00 hrs.</p>
                         <a href="https://www.google.com/maps/place/19.19637310105375, -98.8193297460301" target="_blank">¿Cómo llegar?</a>
@@ -507,10 +507,10 @@
     <div class="container-fluid bg-dark text-white py-5" id="contact" style="margin-top: 90px;">
         <div class="container text-center py-5">
             <div class="section-title position-relative text-center">
-                <h1 class="font-secondary display-3 text-white">Gracias</h1>
-                <h3 class="font-secondary" style="color: tomato;">Te invitamos a confirmar tu asistencia lo antes posible</h3>
+                <h1 class="font-secondary display-3 text-white" style="font-size: 40px;">Gracias</h1>
                 <i class="far fa-heart text-white"></i>
             </div>
+            <h3 class="font-secondary" style="color: tomato;">Apreciaremos mucho si confirmas tu asistencia lo antes posible.</h3>
             <div class="d-flex justify-content-center py-2">
                 <p class="text-white" href="#">Cel. Jani</p>
                 <span class="px-3">|</span>
