--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <h1 class="font-secondary display-3 text-white" style="font-size: 40px;">Gracias</h1>
                 <i class="far fa-heart text-white"></i>
             </div>
-            <h3 class="font-secondary" style="color: tomato;">Apreciaremos mucho si confirmas tu asistencia lo antes posible.</h3>
+            <h3 class="font-secondary" style="color: tomato;">Apreciaremos mucho que confirmes tu asistencia lo antes posible.</h3>
             <div class="d-flex justify-content-center py-2">
                 <p class="text-white" href="#">Cel. Jani</p>
                 <span class="px-3">|</span>
